--- a/app/src/main/res/layout/activity_data_cuci_masuk.xml
+++ b/app/src/main/res/layout/activity_data_cuci_masuk.xml
@@ -66,7 +66,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/bt_datepicker"
-              android:text="Show Date Picker"/>
+              android:text="Pilih Tanggal"/>
 
             <TextView
                 android:id="@+id/tgl_keluar"
@@ -80,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/bt_datepickers"
-                android:text="Show Date Picket"/>
+                android:text="Pilih Tanggal"/>
 
              <ImageView
                 android:id="@+id/imageView"
@@ -94,7 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Standar (3 hari) : Rp.3500/kg"
+                android:text="Biasa (3 hari) : Rp.3500/kg"
                 android:textColor="@android:color/black" />
 
             <TextView
@@ -248,6 +248,7 @@
                 android:layout_width="206dp"
                 android:layout_height="34dp"
                 android:layout_marginTop="4dp"
+                android:textStyle="bold"
                 android:hint="Rp." />
 
             <Button
