Pelanggan sudah bisa di create di cuci masuk

--- a/app/src/main/res/layout/activity_data_cuci_masuk.xml
+++ b/app/src/main/res/layout/activity_data_cuci_masuk.xml
@@ -16,7 +16,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -82,6 +82,62 @@
                 android:hint="Masukan Alamat Pelanggan"
                 android:inputType="text" />
 
+            <Button
+                android:id="@+id/save1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Go" />
+
+            <Button
+                android:id="@+id/get_idpelanggan"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:text="pilih id pelanggan" />
+
+            <TextView
+                android:id="@+id/pelanggan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/get_idpelanggan"
+                android:layout_alignLeft="@+id/button1"
+                android:layout_alignRight="@+id/button1"
+                android:layout_marginTop="16dp"
+                android:text="Data Pelanggan"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <Spinner
+                android:id="@+id/spinner_pelanggan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/pelanggan"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"/>
+
+            <Button
+                android:id="@+id/get_iduser"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:text="pilih id User" />
+
+            <TextView
+                android:id="@+id/user"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/get_iduser"
+                android:layout_alignLeft="@+id/button1"
+                android:layout_alignRight="@+id/button1"
+                android:layout_marginTop="16dp"
+                android:text="Data user"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <Spinner
+                android:id="@+id/spinner_user"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/user"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"/>
+
             <TextView
                 android:id="@+id/tgl_masuk"
                 android:layout_width="wrap_content"
@@ -110,6 +166,37 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Pilih Tanggal" />
+
+            <Button
+                android:id="@+id/save2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Go" />
+
+            <Button
+                android:id="@+id/get_idtransaksi"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:text="pilih id Transaksi" />
+
+            <TextView
+                android:id="@+id/transaksi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/get_idtransaksi"
+                android:layout_alignLeft="@+id/get_idtransaksi"
+                android:layout_alignRight="@+id/get_idtransaksi"
+                android:layout_marginTop="16dp"
+                android:text="Data Id transaksi"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <Spinner
+                android:id="@+id/spinner_transaksi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/transaksi"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"/>
 
             <ImageView
                 android:id="@+id/imageView"
