--- a/app/src/main/res/layout/activity_pelanggan.xml
+++ b/app/src/main/res/layout/activity_pelanggan.xml
@@ -27,7 +27,7 @@
         android:textSize="25dp"
         />
 
-    <HorizontalScrollView
+    <ScrollView
         android:id="@+id/horizontalScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -43,7 +43,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="80dp"></TableLayout>
         </ScrollView>
-    </HorizontalScrollView>
+    </ScrollView>
+
 
 
 </LinearLayout>
