--- a/app/src/main/res/layout/activity_barang.xml
+++ b/app/src/main/res/layout/activity_barang.xml
@@ -25,7 +25,7 @@
         android:textSize="25dp"
         />
 
-    <HorizontalScrollView
+    <ScrollView
         android:id="@+id/horizontalScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -41,6 +41,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="80dp"></TableLayout>
         </ScrollView>
-    </HorizontalScrollView>
+    </ScrollView>
 
 </LinearLayout>
