--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -16,7 +16,7 @@
         android:text="Tabel Pengguna"
         android:textSize="25dp"
         />
-    <HorizontalScrollView
+    <ScrollView
         android:id="@+id/horizontalScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -32,6 +32,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="80dp"></TableLayout>
         </ScrollView>
-    </HorizontalScrollView>
+    </ScrollView>
 
 </LinearLayout>
