--- a/app/src/main/res/layout/activity_data_cuci_masuk.xml
+++ b/app/src/main/res/layout/activity_data_cuci_masuk.xml
@@ -82,6 +82,12 @@
                 android:hint="Masukan Alamat Pelanggan"
                 android:inputType="text" />
 
+            <Button
+                android:id="@+id/bt_go1"
+                android:layout_width="73dp"
+                android:layout_height="wrap_content"
+                android:text="GO" />
+
             <TextView
                 android:id="@+id/tgl_masuk"
                 android:layout_width="wrap_content"
@@ -110,6 +116,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Pilih Tanggal" />
+
+            <Button
+                android:id="@+id/bt_go2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="GO" />
 
             <ImageView
                 android:id="@+id/imageView"
@@ -223,7 +235,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="Tambah Bed Cover / Sprei"
+                android:text="Jumlah Bed Cover / Sprei"
                 android:textColor="@android:color/black" />
 
             <EditText
@@ -255,7 +267,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Tambahan Selimut"
+                android:text="Jumlah Selimut"
                 android:textColor="@android:color/black" />
 
             <EditText
@@ -299,5 +311,4 @@
                 android:text="Save" />
         </LinearLayout>
     </ScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
